# TwistedMetal4Parser

./: .gitignore  CMakeLists.txt  README.md
blender-tools/: tm4_weapon_location_importer.py
lib/: CMakeLists.txt
lib/include/mr_parser/: component.h  mr_parser.h  namable.h  node.h  types.h  utils.h
lib/src/: component.cpp  namable.cpp  node.cpp  utils.cpp
src/: CMakeLIsts.txt  CMakeLists.txt  main.cpp  mr-info.cpp  mr-packager.cpp  mr-to-obj.cpp
src/mr-diff/: CMakeLists.txt  mr-diff.cpp
src/mr-graphics/: CMakeLists.txt  colors.h  geometry.h  graphics-structs.h  textures.cpp  textures.h
src/mr-packager/: CMakeLists.txt  mr-packager.cpp
src/mr-to-obj/: CMakeLists.txt  colors.cpp  geometry.cpp  geometry.h  mr-to-obj.cpp  output.cpp  output.h  textures.cpp  textures.h
src/mr-unpackager/: CMakeLists.txt  mr-unpackager.cpp
src/palette-to-png/: CMakeLists.txt  palette-to-png.cpp
src/png-to-palette/: CMakeLists.txt  png-to-palette.cpp
src/util-explore-types/: CMakeLists.txt  main.cpp
